Search Bar - Base Version

--- a/app/src/main/res/layout/activity_authentication_bridge.xml
+++ b/app/src/main/res/layout/activity_authentication_bridge.xml
@@ -26,7 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:fontFamily="@font/architects_daughter"
+            android:fontFamily="@font/carter_one"
             android:text="FRESH FISH"
             android:textColor="@color/colorPrimary"
             android:textSize="40sp"
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/fresh_tv"
             android:layout_centerHorizontal="true"
-            android:fontFamily="@font/architects_daughter"
+            android:fontFamily="@font/knewave"
             android:text="BUSINESS"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="40sp"
@@ -61,6 +61,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:gravity="center"
+        android:elevation="6dp"
         android:orientation="vertical">
 
         <TextView
