--- a/app/src/main/res/menu/menu_market_toolbar.xml
+++ b/app/src/main/res/menu/menu_market_toolbar.xml
@@ -2,9 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/menu_search_item"
+        android:id="@+id/toolbar_search"
         android:icon="@drawable/search"
         android:title="Search"
-        app:actionViewClass="com.ferfalk.simplesearchview.SimpleSearchView"
+        app:actionViewClass="android.widget.SearchView"
         app:showAsAction="ifRoom|collapseActionView" />
 </menu>
