--- a/app/src/main/res/layout/fragment_my_fishes.xml
+++ b/app/src/main/res/layout/fragment_my_fishes.xml
@@ -1,27 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/blue_white">
 
-    <TextView
-        android:id="@+id/market_market"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10sp"
-        android:fontFamily="@font/architects_daughter"
-        android:gravity="center"
-        android:text="My Fishes"
-        android:textColor="@color/colorPrimary"
-        android:textSize="20sp"
-        android:textStyle="bold" />
+    <include
+        android:id="@+id/my_fish_toolbar"
+        layout="@layout/toolbar" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/market_recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/market_market"
-        android:layout_marginTop="10sp"
+        android:layout_below="@id/my_fish_toolbar"
         android:padding="4sp" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/my_fishes_add_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="16sp"
+        android:layout_marginBottom="16sp"
+        android:src="@drawable/add_btn"
+        app:backgroundTint="@color/colorPrimary"
+        app:rippleColor="@color/color_White"
+        app:tint="@color/color_White" />
 
 </RelativeLayout>
