--- a/app/src/main/res/layout/short_fish_details_item.xml
+++ b/app/src/main/res/layout/short_fish_details_item.xml
@@ -14,55 +14,57 @@
             android:id="@+id/short_fish_details_pic"
             android:layout_width="90sp"
             android:layout_height="90sp"
+            android:layout_centerVertical="true"
             android:layout_margin="8sp"
             android:src="@drawable/default_fish" />
 
-        <TextView
-            android:id="@+id/short_fish_details_name"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10sp"
-            android:layout_marginTop="8sp"
-            android:layout_toEndOf="@id/short_fish_details_pic"
-            android:fontFamily="@font/lato"
-            android:text="FISH NAME"
-            android:textColor="@color/colorPrimary"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            android:layout_centerVertical="true"
+            android:layout_margin="10sp"
+            android:layout_toRightOf="@id/short_fish_details_pic"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/short_fish_details_price"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/short_fish_details_name"
-            android:layout_marginStart="10sp"
-            android:layout_toEndOf="@id/short_fish_details_pic"
-            android:fontFamily="@font/ubuntu"
-            android:text="FISH PRICE"
-            android:textColor="@color/colorPrimary" />
+            <TextView
+                android:id="@+id/short_fish_details_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/lato"
+                android:text="FISH NAME"
+                android:textColor="@color/colorPrimary"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/short_fish_details_availability"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/short_fish_details_price"
-            android:layout_marginStart="10sp"
-            android:layout_toEndOf="@id/short_fish_details_pic"
-            android:fontFamily="@font/ubuntu"
-            android:text="FISH AVAILABILITY"
-            android:textColor="@color/colorPrimary" />
+            <TextView
+                android:id="@+id/short_fish_details_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4sp"
+                android:fontFamily="@font/ubuntu"
+                android:text="FISH PRICE"
+                android:textColor="@color/colorPrimary" />
 
-        <TextView
-            android:id="@+id/short_fish_details_location"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/short_fish_details_availability"
-            android:layout_marginStart="10sp"
-            android:layout_marginBottom="8sp"
-            android:layout_toEndOf="@id/short_fish_details_pic"
-            android:fontFamily="@font/ubuntu"
-            android:text="FISH LOCATION"
-            android:textColor="@color/colorPrimary" />
+            <TextView
+                android:id="@+id/short_fish_details_availability"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4sp"
+                android:fontFamily="@font/ubuntu"
+                android:text="FISH AVAILABILITY"
+                android:textColor="@color/colorPrimary" />
+
+            <TextView
+                android:id="@+id/short_fish_details_location"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4sp"
+                android:fontFamily="@font/ubuntu"
+                android:text="FISH LOCATION"
+                android:textColor="@color/colorPrimary" />
+
+        </LinearLayout>
+
 
     </RelativeLayout>
 
