--- a/app/src/main/res/layout/activity_add_new_fish.xml
+++ b/app/src/main/res/layout/activity_add_new_fish.xml
@@ -136,7 +136,7 @@
                 android:layout_below="@id/add_fish_location"
                 android:layout_marginStart="20sp"
                 android:layout_marginTop="20sp"
-                android:fontFamily="@font/architects_daughter"
+                android:fontFamily="@font/ubuntu"
                 android:text="Availability"
                 android:textColor="@color/colorPrimary"
                 android:textSize="18sp"
@@ -146,6 +146,7 @@
                 android:id="@+id/add_new_fish_layout_4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:orientation="vertical"
                 android:layout_below="@id/add_fish_availability_tv"
                 android:layout_marginBottom="15sp"
                 android:gravity="center">
@@ -156,10 +157,10 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10sp"
                     android:layout_marginBottom="10sp"
-                    android:ems="8"
-                    android:fontFamily="@font/architects_daughter"
+                    android:fontFamily="@font/ubuntu"
                     android:gravity="center"
                     android:text="Available"
+                    android:ems="10"
                     android:textColor="@color/color_green"
                     android:textStyle="bold"
                     app:backgroundTint="@color/color_White"
@@ -169,12 +170,11 @@
                     android:id="@+id/add_fish_out_of_stock_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="10sp"
                     android:layout_marginTop="10sp"
                     android:layout_marginBottom="10sp"
-                    android:ems="8"
-                    android:fontFamily="@font/architects_daughter"
+                    android:fontFamily="@font/ubuntu"
                     android:gravity="center"
+                    android:ems="10"
                     android:text="Out of Stock"
                     android:textColor="@color/color_red"
                     android:textStyle="bold"
