--- a/app/src/main/res/layout/activity_full_fish_details.xml
+++ b/app/src/main/res/layout/activity_full_fish_details.xml
@@ -1,9 +1,128 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".FullFishDetails">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ScrollView
+        android:id="@+id/full_fish_layout_2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true"
+        android:scrollbars="vertical">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/full_fish_pic"
+                android:layout_width="match_parent"
+                android:layout_height="300sp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10sp"
+                android:src="@drawable/default_fish" />
+
+
+            <TextView
+                android:id="@+id/full_fish_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/full_fish_pic"
+                android:layout_marginStart="15sp"
+                android:layout_marginTop="10sp"
+                android:fontFamily="@font/ubuntu"
+                android:gravity="center"
+                android:padding="10sp"
+                android:text="Fish Name"
+                android:textColor="@color/colorPrimary"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/full_fish_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/full_fish_name"
+                android:layout_marginStart="15sp"
+                android:fontFamily="@font/ubuntu_bold"
+                android:gravity="center"
+                android:padding="10sp"
+                android:text="Fish Price"
+                android:textColor="@color/colorPrimary"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/full_fish_availability"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/full_fish_line1"
+                android:layout_marginStart="15sp"
+                android:fontFamily="@font/ubuntu"
+                android:gravity="center"
+                android:padding="10sp"
+                android:text="Fish Availability"
+                android:textColor="@color/colorPrimary"
+                android:textSize="18sp" />
+
+            <View
+                android:id="@+id/full_fish_line1"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:layout_below="@id/full_fish_price"
+                android:layout_marginHorizontal="10sp"
+                android:layout_marginTop="5sp"
+                android:background="@color/blue_white" />
+
+            <TextView
+                android:id="@+id/full_fish_location"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/full_fish_availability"
+                android:layout_marginStart="15sp"
+                android:fontFamily="@font/ubuntu"
+                android:padding="10sp"
+                android:text="Fish Location"
+                android:textColor="@color/colorPrimary"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/full_fish_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/full_fish_seller_name"
+                android:layout_marginStart="15sp"
+                android:fontFamily="@font/ubuntu"
+                android:padding="10sp"
+                android:text="Fish Post Time"
+                android:textColor="@color/colorPrimary"
+                android:textSize="18sp" />
+
+            <View
+                android:id="@+id/full_fish_line2"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:layout_below="@id/full_fish_location"
+                android:layout_marginHorizontal="10sp"
+                android:layout_marginTop="5sp"
+                android:background="@color/blue_white" />
+
+            <TextView
+                android:id="@+id/full_fish_seller_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/full_fish_line2"
+                android:layout_marginStart="15sp"
+                android:fontFamily="@font/ubuntu"
+                android:padding="10sp"
+                android:text="Seller Name"
+                android:textColor="@color/colorPrimary"
+                android:textSize="18sp" />
+
+
+        </RelativeLayout>
+
+    </ScrollView>
+
+</RelativeLayout>
