--- a/app/src/main/res/layout/fragment_my_fishes.xml
+++ b/app/src/main/res/layout/fragment_my_fishes.xml
@@ -9,6 +9,24 @@
         android:id="@+id/my_fish_toolbar"
         layout="@layout/toolbar" />
 
+    <ImageView
+        android:id="@+id/my_fish_no_fish_image"
+        android:layout_width="150sp"
+        android:layout_height="150sp"
+        android:layout_above="@id/my_fish_no_fish_tv"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="15sp" />
+
+    <TextView
+        android:id="@+id/my_fish_no_fish_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:fontFamily="@font/ubuntu_bold"
+        android:gravity="center"
+        android:textSize="20sp"
+        android:textStyle="bold" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/market_recycler"
         android:layout_width="match_parent"
