--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -33,8 +33,19 @@
             android:layout_below="@id/profile_name"
             android:layout_marginStart="10sp"
             android:layout_marginTop="10sp"
-            android:layout_marginBottom="10sp"
             android:text="+91-1234567890"
+            android:textColor="@color/color_White"
+            android:textStyle="normal" />
+
+        <TextView
+            android:id="@+id/profile_email"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/profile_number"
+            android:layout_marginStart="10sp"
+            android:layout_marginTop="10sp"
+            android:layout_marginBottom="10sp"
+            android:text="smartechbraintechnologies@gmail.com"
             android:textColor="@color/color_White"
             android:textStyle="normal" />
 
@@ -102,6 +113,7 @@
                         android:layout_marginTop="15sp"
                         android:layout_marginBottom="10sp"
                         android:clickable="true"
+                        android:textSize="16sp"
                         android:focusable="true"
                         android:text="My Adresses"
                         android:textColor="@color/colorPrimary" />
@@ -124,6 +136,7 @@
                         android:clickable="true"
                         android:focusable="true"
                         android:text="Past Orders"
+                        android:textSize="16sp"
                         android:textColor="@color/colorPrimary" />
 
                 </LinearLayout>
